refactor: typeRelationKind を kinds の配列に変更し from-to を一意にする
JIG-DOCUMENT: DomainModel
AGENT: Claude